# serializer version: 1
# name: test_work_item_list_row_list[ag]
  dict({
    'data': list([
      dict({
        'attributes': dict({
          'applicants': 'Tate Inc',
          'closed-at': None,
          'deadline': '2025-01-01T01:00:00+01:00',
          'description': 'Überbauung "Westfeld"',
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              '80fe47bf-9ed6-415c-af91-9c210b81977b',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Aarburg',
          'special-id': '2025-1',
          'status': 'ready',
          'task': 'from-template-and-read',
          'unread': False,
        }),
        'id': '80fe47bf-9ed6-415c-af91-9c210b81977b',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': 'Tate Inc',
          'closed-at': None,
          'deadline': '2025-01-02T01:00:00+01:00',
          'description': 'Überbauung "Westfeld"',
          'direct-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'owner-car-kitchen',
              'no-placeholder',
            ]),
            'route': 'foo.bar.baz',
          }),
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'bb8ccb4e-15ae-4037-bad7-f7b310280c23',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Aarburg',
          'special-id': '2025-1',
          'status': 'ready',
          'task': 'from-task',
          'unread': True,
        }),
        'id': 'bb8ccb4e-15ae-4037-bad7-f7b310280c23',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': 'Tate Inc',
          'closed-at': None,
          'deadline': '2025-01-03T01:00:00+01:00',
          'description': 'Überbauung "Westfeld"',
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'b06f8e43-9fd1-4d2c-bb5c-366adc3f7a4a',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Aarburg',
          'special-id': '2025-1',
          'status': 'ready',
          'task': 'assigned',
          'unread': True,
        }),
        'id': 'b06f8e43-9fd1-4d2c-bb5c-366adc3f7a4a',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': 'Tate Inc',
          'closed-at': '2025-07-17T16:33:00+02:00',
          'deadline': '2025-01-04T01:00:00+01:00',
          'description': 'Überbauung "Westfeld"',
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              '0974bea4-741d-4655-b018-45564c735fce',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': False,
          'is-suspended': False,
          'municipality': 'Aarburg',
          'special-id': '2025-1',
          'status': 'completed',
          'task': 'completed',
          'unread': True,
        }),
        'id': '0974bea4-741d-4655-b018-45564c735fce',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
    ]),
    'links': dict({
      'first': 'http://testserver/api/v1/work-item-list-rows?page%5Bnumber%5D=1&page%5Bsize%5D=20&role=active',
      'last': 'http://testserver/api/v1/work-item-list-rows?page%5Bnumber%5D=1&page%5Bsize%5D=20&role=active',
      'next': None,
      'prev': None,
    }),
    'meta': dict({
      'pagination': dict({
        'count': 4,
        'page': 1,
        'pages': 1,
      }),
    }),
  })
# ---
# name: test_work_item_list_row_list[so]
  dict({
    'data': list([
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-01T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'd829f577-5954-4ccc-8f95-c204ecbc1cba',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Solothurn',
          'special-id': '2601-2024-1',
          'status': 'ready',
          'task': 'from-template-and-read',
          'unread': False,
        }),
        'id': 'd829f577-5954-4ccc-8f95-c204ecbc1cba',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-02T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'owner-car-kitchen',
              'no-placeholder',
            ]),
            'route': 'foo.bar.baz',
          }),
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'c6b48b0a-708e-4cc8-aa88-84f896676c35',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Solothurn',
          'special-id': '2601-2024-1',
          'status': 'ready',
          'task': 'from-task',
          'unread': True,
        }),
        'id': 'c6b48b0a-708e-4cc8-aa88-84f896676c35',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': None,
          'deadline': '2025-01-03T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'e45e179c-d728-4806-8551-164aa2601c51',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': True,
          'is-suspended': False,
          'municipality': 'Solothurn',
          'special-id': '2601-2024-1',
          'status': 'ready',
          'task': 'assigned',
          'unread': True,
        }),
        'id': 'e45e179c-d728-4806-8551-164aa2601c51',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
          'closed-by-user': dict({
            'data': None,
          }),
        }),
        'type': 'work-item-list-rows',
      }),
      dict({
        'attributes': dict({
          'applicants': None,
          'closed-at': '2025-07-17T16:33:00+02:00',
          'deadline': '2025-01-04T01:00:00+01:00',
          'description': 'Grosses Haus',
          'direct-link': None,
          'edit-link': dict({
            'models': list([
              '<INSTANCE_ID>',
              'ea591a73-c3e3-4640-8fa3-fccb1da90a3c',
            ]),
            'route': 'cases.detail.work-items.edit',
          }),
          'instance-id': '<INSTANCE_ID>',
          'instance-name': 'Baugesuch',
          'is-addressed-to-current-service': True,
          'is-assigned-to-current-user': False,
          'is-controlled-by-current-service': False,
          'is-created-by-current-service': False,
          'is-manually-completable': False,
          'is-ready': False,
          'is-suspended': False,
          'municipality': 'Solothurn',
          'special-id': '2601-2024-1',
          'status': 'completed',
          'task': 'completed',
          'unread': True,
        }),
        'id': 'ea591a73-c3e3-4640-8fa3-fccb1da90a3c',
        'relationships': dict({
          'addressed-service': dict({
            'data': dict({
              'id': '<SERVICE_ID>',
              'type': 'public-services',
            }),
          }),
          'assigned-user': dict({
            'data': None,
          }),
          'closed-by-user': dict({
            'data': dict({
              'id': '<USER_ID>',
              'type': 'public-users',
            }),
          }),
        }),
        'type': 'work-item-list-rows',
      }),
    ]),
    'links': dict({
      'first': 'http://testserver/api/v1/work-item-list-rows?page%5Bnumber%5D=1&page%5Bsize%5D=20&role=active',
      'last': 'http://testserver/api/v1/work-item-list-rows?page%5Bnumber%5D=1&page%5Bsize%5D=20&role=active',
      'next': None,
      'prev': None,
    }),
    'meta': dict({
      'pagination': dict({
        'count': 4,
        'page': 1,
        'pages': 1,
      }),
    }),
  })
# ---
